2019-04-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* grid_element.C: Use themedim_elementObj for holding individual
	grid cells paddings. This throws an exception immediately if a
	non-existent theme padding value was set.

	* main_window_handler.C: fix handling of edge case when an error
	creates a main window with no size.

0.21

2019-04-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* font and color picker: implement save() and restore().

	* editor_impl.C rewrap_due_to_updated_position: fix scrolling
	of centered input fields.

2019-04-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* No longer necessary to explicitly save() adjustable table column
	widths, so that they can be restored() the next time. They'll get
	save()d automatically.

	* Save and restore pane container sizes.

	* Make saving and restoring of dialog positions consistent with
	main windows' by renaming screen_position() to restore().

0.20

2019-03-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* Completed the refactoring of default theme loading into
	appearance objects.

2019-03-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* element: implement an on_motion_event() callback. Use this in
	the color picker popup, on the fixed color strip.

2019-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* panelayoutmanager, gridlayoutmanager: bug fixes here, and in the
	grid layoutmanager. I can't count.

2019-03-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Customizable combo-box appearance.

2019-03-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* list_appearance: separate object with settings for a list's visual
	appearance, used by the list layout manager, combo box layout manager,
	menu layout manager, et al...

	* booklayoutmanager: custom book tab appearance.

2019-03-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* button.C: Refactor create_button*(), using optional_args from
	libcxxbase.

0.19.0

2019-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement splash windows
