@@ -1,3 +1,9 @@
+2019-04-27  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* element_impl.C (elementObj::implObj::scroll_by_parent_container):
+	Fix scrolling performance bugs.
+
+
 2019-04-20  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* grid_element.C: Use themedim_elementObj for holding individual
